# chess-tui

./: .gitignore  AGENTS.md  LICENSE  README.md  activate  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: tests.yml
data/openings/lichess/: VERSION
devtools/: aliases.sh
docs/: README.md  plans.md
docs/design/: opening-classification.md  opening-rule-engine-v4.md  piece-development-authoring.md  rule-authoring-ui.md  rule-policy-v2.md  rule-policy-v3.md  web-development-mode.md
docs/reference/: london-open-guide.md
flows/: london.toml  london.toml.bak
scripts/: build_opening_index.py  check-setup.py  chess-tui.py  fix-deps.py
src/chess_tui/: __init__.py  __main__.py  app.py  board.py  cli.py  game.py  input_mode.py  layout.py  modes.py  output_schema.json  runtime.py  tui.py  view.py
src/chess_tui/assets/: __init__.py
src/chess_tui/commands/: __init__.py  models.py  registry.py
src/chess_tui/engine/: __init__.py  assessment.py  errors.py  fixture.py  models.py  service.py  stockfish.py
src/chess_tui/flow/: __init__.py  author.py  errors.py  models.py  policy.py  position.py  store.py  workspace.py
src/chess_tui/opening/: __init__.py  bot.py  classification.py  engine_bot.py  errors.py  fixture.py  models.py  planner.py  source.py
src/chess_tui/policy/: __init__.py  actions.py  conditions.py  models.py  relations.py  runtime.py  tracker.py
src/chess_tui/renderers/: __init__.py  base.py  colors.py  errors.py  factory.py  legacy_sprite.py  mode.py  pixel_mask.py  unicode.py
src/chess_tui/screens/: __init__.py  author.py  base.py  local_game.py  modals.py  quiz.py
src/chess_tui/sessions/: __init__.py  base.py  demo.py  errors.py  models.py  provider.py
src/chess_tui/web/: __init__.py  api_models.py  app.py  errors.py  server.py  sessions.py
tests/: test_advantage.py  test_author.py  test_board.py  test_commands.py  test_engine.py  test_flow.py  test_game.py  test_layout.py  test_opening.py  test_opening_classification.py  test_opponent.py  test_piece_development.py  test_quiz.py  test_relations.py  test_sessions.py  test_smoke.py  test_web_api.py  test_workspace.py
tests/fixtures/: fens.json  london-flow.toml
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
web/src/api/: client.ts
(+47 files in other folders)
