[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-tui"
version = "0.1.0"
description = "Interactive CLI chess board visualizer"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Bradley Fallon", email = "bradley.fallon@gmail.com" }]
dependencies = [
  "rich==15.0.0",
  "textual==8.2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=24.0.0",
  "ruff>=0.5.0",
  "pyright>=1.1.0",
  "tox>=4.0.0",
  "coverage>=7.0.0",
]

[project.scripts]
chess-tui = "chess_tui.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["chess_tui"]

[tool.setuptools.package-data]
chess_tui = ["output_schema.json"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = "venv"
