[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-tui"
version = "0.1.0"
description = "Interactive CLI chess board visualizer"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Bradley Fallon", email = "bradley.fallon@gmail.com" }]
dependencies = [
  "python-chess==1.999",
  "rich==15.0.0",
  "textual==8.2.8",
  "fastapi[standard]>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=24.0.0",
  "ruff>=0.5.0",
  "pyright>=1.1.0",
  "tox>=4.0.0",
  "coverage>=7.0.0",
  "httpx>=0.28.0,<1.0.0",
]

[project.scripts]
chess-tui = "chess_tui.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["chess_tui", "chess_tui.*"]

[tool.setuptools.package-data]
chess_tui = ["output_schema.json", "assets/pieces/*.toml", "assets/quiz/*.toml"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = "venv"
